fix: content centering and z-index position on adaptation

--- a/src/sass/_base_component.scss
+++ b/src/sass/_base_component.scss
@@ -38,6 +38,11 @@
   max-width: 320px;
 }
 
+.main-heading {
+  position: relative;
+  z-index: 2;
+}
+
 .complete-your-profile {
   font-weight: 700;
   line-height: 1;
